--- a/plop-crud/template/constroller.hbs
+++ b/plop-crud/template/constroller.hbs
@@ -1,1 +1,2 @@
-mport { Body, Controller, Get, Post, Query } from '@snow';
+import { Body, Controller, Get, Post, Query } from '@snow';\
+import { {{bigCamelTableName}}Dao } from '../dao/{{bigCamelTableName}}Dao';
