--- a/plop-crud/template/constroller.hbs
+++ b/plop-crud/template/constroller.hbs
@@ -1,2 +1,4 @@
 import { Body, Controller, Get, Post, Query } from '@snow';\
 import { {{bigCamelTableName}}Dao } from '../dao/{{bigCamelTableName}}Dao';
+
+@Controller('/{{tableName}}')
