--- a/plop-crud/template/constroller.hbs
+++ b/plop-crud/template/constroller.hbs
@@ -2,3 +2,4 @@ import { Body, Controller, Get, Post, Query } from '@snow';\
 import { {{bigCamelTableName}}Dao } from '../dao/{{bigCamelTableName}}Dao';
 
 @Controller('/{{tableName}}')
+export default class {{bigCamelTableName}}Controller {
