--- a/plop-crud/template/constroller.hbs
+++ b/plop-crud/template/constroller.hbs
@@ -3,3 +3,4 @@ import { {{bigCamelTableName}}Dao } from '../dao/{{bigCamelTableName}}Dao';
 
 @Controller('/{{tableName}}')
 export default class {{bigCamelTableName}}Controller {
+private readonly {{tableName}}Dao = new {{bigCamelTableName}}Dao();
