--- a/plop-crud/template/constroller.hbs
+++ b/plop-crud/template/constroller.hbs
@@ -3,4 +3,5 @@ import { {{bigCamelTableName}}Dao } from '../dao/{{bigCamelTableName}}Dao';
 
 @Controller('/{{tableName}}')
 export default class {{bigCamelTableName}}Controller {
-private readonly {{tableName}}Dao = new {{bigCamelTableName}}Dao();
+ private readonly {{tableName}}Dao = new {{bigCamelTableName}}Dao();
+ @Post('/add{{bigCamelTableName}}')
