--- a/plop-crud/template/constroller.hbs
+++ b/plop-crud/template/constroller.hbs
@@ -10,4 +10,7 @@ export default class {{bigCamelTableName}}Controller {
  }
  @Post('/find{{bigCamelTableName}}ById')
  async find{{bigCamelTableName}}(@Query('id') id) {
+ return await this.{{tableName}}Dao.selectOne(id);
+ }
+ 
 
