--- a/plop-crud/template/constroller.hbs
+++ b/plop-crud/template/constroller.hbs
@@ -14,4 +14,4 @@ export default class {{bigCamelTableName}}Controller {
  }
 
  @Post('/find{{bigCamelTableName}}List')
-
+ async find{{bigCamelTableName}}List(@Body() body) {
