--- a/plop-crud/template/constroller.hbs
+++ b/plop-crud/template/constroller.hbs
@@ -17,4 +17,6 @@ export default class {{bigCamelTableName}}Controller {
  async find{{bigCamelTableName}}List(@Body() body) {
     const { page, size, ...queryParams } = body;
     return await this.{{tableName}}Dao.selectPage(queryParams, { page, size }, { dirc: 'desc', field: 'ctime' });
-  }
+ }
+
+ @Post('/edit{{bigCamelTableName}}')
