async edit{{bigCamelTableName}}(@Body() body) {

--- a/plop-crud/template/constroller.hbs
+++ b/plop-crud/template/constroller.hbs
@@ -20,3 +20,4 @@ export default class {{bigCamelTableName}}Controller {
  }
 
  @Post('/edit{{bigCamelTableName}}')
+ async edit{{bigCamelTableName}}(@Body() body) {
