--- a/plop-crud/template/constroller.hbs
+++ b/plop-crud/template/constroller.hbs
@@ -25,3 +25,4 @@ export default class {{bigCamelTableName}}Controller {
   }
 
 @Post('/delete{{bigCamelTableName}}')
+async delete{{bigCamelTableName}}(@Query('id') id) {
