--- a/plop-crud/template/dao.hbs
+++ b/plop-crud/template/dao.hbs
@@ -1,3 +1,5 @@
 import { BaseDao, Dao, Sql } from '@snow';
 
 @Dao('{{tablePrefix}}{{tableName}}')
+
+export class {{bigCamelTableName}}Dao extends BaseDao {}
